styles/globals.css
@import 'fonts.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply font-sans antialiased bg-white min-h-screen;
  }

  h1 {
    @apply text-3xl text-blue-light font-semibold align-middle flex flex-row items-center w-full;
    @apply mb-3;
  }

  h2 {
    @apply text-2xl text-blue-light font-semibold align-middle flex flex-row items-center w-full;
    @apply mb-3;
    @apply lg:justify-center;
  }

  h3 {
    @apply text-xl;
  }

  h4 {
    @apply text-base text-blue-dark font-semibold;
  }

  h5 {
    @apply text-sm text-blue uppercase font-archivo tracking-widest;
    @apply lg:text-center;
  }

  .h5-alt {
    @apply text-xs uppercase font-bold tracking-2 font-archivo text-grey-dark whitespace-nowrap;
  }

  h6.tag {
    @apply font-archivo tracking-widest text-grey-dark uppercase;
  }

  ul:not(.plain),
  ol:not(.plain) {
    @apply px-4 ml-4 pt-2 pb-4;
    li {
      @apply list-disc mb-1 last:mb-0;
    }
  }

  a {
    @apply text-blue hover:text-blue-light underline;
  }

  a:not(.motion-controlled) {
    @apply transition-all duration-200;
  }

  p + p {
    @apply mt-[0.5em];
  }
}

@layer components {
  .container {
    @apply max-w-screen-lg px-4 lg:px-5 mx-auto;

    &.container--sm {
      @apply max-w-lg;
    }

    &.container--narrow {
      @apply max-w-[840px];
    }

    &.container--mid {
      @apply max-w-screen-mlg;
    }

    &.container--lg {
      @apply max-w-[80rem];
    }

    &.container--wide {
      @apply max-w-[83rem];
    }

    &.container--fluid {
      @apply max-w-none;
    }
  }

  .search-bar-wrapper {
    @apply flex-1 rounded-30 border-1 pl-3 pr-1 py-[3px] lg:py-2 lg:pl-5;
    @apply mx-auto;
    @apply flex flex-row items-center;
    @apply placeholder:text-grey;
  }

  .search-bar-wrapper--transparent {
    @apply transition-[border-radius] bg-white placeholder:text-grey-dark border-0 border-grey-dark relative;
  }

  .search-bar-wrapper--active {
    @apply relative z-50;

    .fa-search {
      @apply text-blue-dark;
    }

    .search-close-btn {
      @apply translate-y-0 opacity-100 pointer-events-auto delay-150;
    }
  }

  .search-bar {
    @apply outline-none flex-1 transition-all duration-100;
  }

  .search-icon {
    @apply text-xl;
    @apply transition-all duration-100;
  }

  .btn {
    @apply w-full bg-coral text-base no-underline py-3 p-4 text-center block rounded-[4px] my-6;
    @apply !text-white font-medium;

    @apply hover:bg-coral-dark;
  }

  .basic-carousel {
    @apply max-w-full h-full;
    @apply overflow-x-scroll overflow-y-auto;
    @apply relative;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;

    /* 
      hack necessary for hiding ios safari
      https://stackoverflow.com/a/61799019 
    */
    @apply pb-7 -mb-7;
    clip-path: inset(0 0 28px 0);
  }

  .basic-carousel::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 0;
    height: 0;
    @apply bg-transparent;
  }

  .basic-carousel::-webkit-scrollbar-thumb {
    -webkit-appearance: none;
    width: 0;
    height: 0;
    @apply bg-transparent;
  }

  .basic-carousel__slider {
    @apply md:px-0 h-full gap-x-2;
    @apply flex-1 items-start flex flex-row;
    @apply max-w-none z-30;

    &::-webkit-scrollbar {
      @apply hidden;
    }
  }

  .basic-carousel__control {
    @apply h-[calc(100%_-_1.75em)] w-16 from-white/75 to-transparent absolute top-0 z-20;
    @apply flex items-center justify-center;
  }

  .basic-carousel__control--prev {
    @apply bg-gradient-to-r left-0;
    @apply cursor-prev-btn;
  }

  .basic-carousel__control--next {
    @apply bg-gradient-to-l right-0;
    @apply cursor-next-btn;
  }

  .basic-carousel__card {
    @apply h-full px-0 flex flex-col justify-between bg-white;
    @apply last:!snap-end;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-touch-callout: none;
  }

  .basic-carousel__card + .basic-carousel__card:last-child {
    @apply mr-4;
  }

  .basic-carousel__card-wrapper {
    @apply relative p-1 lg:p-0;
  }

  .basic-carousel__card-highlight {
    @apply absolute w-full h-full left-0 top-0 z-10 rounded-md;
    background-size: 800% 800%;
    background-image: linear-gradient(
      56deg,
      #ebe7e5,
      #28c9aa,
      #ebe7e5,
      #28c9aa,
      #ebe7e5,
      #28c9aa,
      #ebe7e5,
      #28c9aa,
      #28c9aa,
      #28c9aa
    );
  }

  .basic-carousel__card--featured {
    @apply relative z-20;
  }

  .divider-t {
    @apply before:content-[""] before:w-[calc(100%+1rem)] before:-mx-2 before:h-[1px] before:bg-grey-light;
    @apply before:mt-3 before:block;
  }

  .divider-t-taller,
  .divider-t-8 {
    @apply before:my-8;
  }

  .divider-b {
    @apply after:content-[""] after:w-[calc(100%+1rem)] after:-mx-2 after:h-[1px] after:bg-grey-light;
    @apply after:mt-3 after:block;
  }

  .divider-b-taller,
  .divider-b-8 {
    @apply after:mt-8;
  }

  .divider-b-12 {
    @apply after:mt-12;
  }

  .divider-b-16 {
    @apply after:mt-16;
  }

  .divider-b-wider {
    @apply after:content-[""] after:block after:mt-6 after:-mx-6 after:h-[2px] after:w-[calc(100%_+_3rem)] after:bg-grey-light;
  }

  .page-icons {
    @apply absolute top-[50px] w-full z-20 p-4 lg:hidden;
    @apply lg:hidden;
    @apply flex flex-row justify-between;
  }

  .page-icon-wrapper {
    @apply rounded-full bg-white bg-opacity-60 h-9 w-9 text-center text-2xl flex justify-center items-center;
    @apply shadow-md;
    @apply hover:opacity-80 duration-150 transition-opacity;
  }

  .field-wrapper {
    & + .field-wrapper {
      @apply mt-6;
    }
  }

  .text-input-wrapper {
    @apply bg-white-pure px-4 py-2 text-black w-full;
    @apply rounded-md border-1 border-grey;
    @apply flex flex-row items-center;

    input {
      @apply focus:outline-none;
    }
  }

  .footer-wrapper {
    @apply bg-blue-dark text-white mt-7;
  }

  .image {
    @apply max-h-[600px] my-4;

    img {
      @apply mx-auto max-h-[600px];
    }

    &.image_resized {
      @apply max-w-full mx-auto;
    }

    &.image-style-side {
      @apply float-right m-2 mt-4;
    }
  }

  figure.image {
    @apply mx-auto;
  }
}

@layer utilities {
  .inline-link {
    a {
      @apply underline;
    }
  }
  .header {
    @apply bg-blue-dark fixed w-full top-0;
    @apply flex flex-row items-center;
    @apply lg:p-4 z-40 lg:!translate-y-0;
    @apply lg:sticky;

    a {
      @apply text-white hover:text-grey-light;
    }

    .header-wrapper {
      @apply pt-1;
      @apply flex flex-row justify-between items-center relative flex-1;
      @apply absolute top-full w-full h-full;
    }
  }

  .logo-wrapper {
    @apply leading-none;
  }

  .desktop-menu-wrapper {
    @apply hidden lg:flex flex-1 flex-row gap-x-6 justify-end text-white;
    @apply pb-1;

    a {
      @apply no-underline;
      @apply transition-all duration-100;
      @apply hover:opacity-70;
    }
  }

  .icon-wrapper {
    @apply pb-1 text-white gap-x-6 flex flex-row;

    button {
      @apply hover:text-teal transition-colors duration-100;
      @apply p-2 -m-2;

      path {
        @apply stroke-current stroke-2;
        @apply transition-all duration-300;
      }
    }
  }

  #__next {
    @apply flex flex-col min-h-screen;
  }

  .main {
    @apply flex-1;
  }

  .modal-wrapper {
    @apply fixed w-full h-full bg-grey-dark bg-opacity-80 flex flex-row justify-end;
    @apply z-30;
  }

  .search-suggestions {
    @apply rounded-b-22 bg-white w-full self-start;
    @apply shadow-md z-20;
  }

  .search-suggestion {
    @apply py-2 text-grey-dark px-5;
    @apply last:pb-4 first:pt-4;

    .fa-history {
      @apply text-grey pr-3;
    }
  }

  .home-items-grid {
    *:nth-child(n + 5):nth-child(-n + 8) {
      @apply hidden lg:block;
    }
  }

  .footer {
    @apply flex flex-row justify-between;
    @apply px-4 py-3;
  }

  .social-icon {
    @apply p-2 text-2xl text-white;
  }

  .faq-section {
    @apply my-8 pb-4 first:mt-16 last:pb-0;
  }

  .faq-header {
    @apply bg-bg px-4 py-2;
  }

  .article-body {
    @apply lg:w-3/4;

    a {
      @apply text-blue;
    }

    p + p {
      @apply mt-2;
    }

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply block text-left mb-4 mt-4;
      @apply first:mt-0;
    }

    h2 {
      @apply text-3xl text-black;
    }

    h3 {
      @apply text-2xl mb-2;
    }

    h4 {
      @apply text-lg;
    }

    blockquote,
    code {
      @apply w-[90%] block my-4;
    }

    blockquote {
      @apply mx-auto bg-teal p-6;
      @apply text-2xl text-white;
    }

    code {
      @apply whitespace-pre-wrap text-base bg-grey-light border-1 border-white;
      @apply mx-auto p-6;
      @apply text-black;
    }

    ul,
    ol {
      @apply list-outside ml-5 my-2 py-2 px-4;

      li + li {
        @apply mt-2;
      }
    }
  }

  .form-submission-btn {
    @apply w-full lg:w-auto;
    @apply bg-coral text-white px-5 py-2 mt-4 rounded-md text-lg font-semibold;
    @apply hover:bg-coral-dark transition-all;
    @apply disabled:bg-grey-light;
  }

  #nprogress .spinner {
    @apply left-[calc(50vw-9px)] p-1 bg-white rounded-full animate-fade-in;
    @apply shadow;
    @apply !right-auto;

    .spinner-icon {
      @apply border-t-teal border-l-teal;
    }
  }

  .cards {
    @apply grid grid-cols-2 md:grid-cols-3 mt-2;
    @apply gap-x-2 gap-y-2 lg:gap-x-7 lg:gap-y-6 lg:mt-4;
    @apply items-start;
  }

  .main {
    .bg-blue,
    .bg-blue-dark,
    .bg-blue-light,
    .bg-purple,
    .bg-coral,
    .bg-red,
    .bg-teal,
    .bg-mustard,
    .bg-grey,
    .bg-grey-mid,
    .bg-grey-light {
      a {
        @apply text-white hover:text-white hover:opacity-70;
        @apply underline underline-offset-4 hover:no-underline;
      }
    }
  }

  .info-insights {
    h2 {
      @apply text-2xl;
    }

    h3 {
      @apply text-xl;
    }

    h4 {
      @apply text-lg;
    }
  }

  .recommendation__box {
    h2 {
      @apply text-black block;
    }
  }

  .resource__box {
    .raw-html-embed {
      @apply -mx-2;
    }

    a {
      @apply underline hover:no-underline;
    }
  }

  .summary-box {
    @apply flex-1 border-1 rounded-md;
    @apply flex flex-row justify-between items-center lg:items-start lg:justify-between;

    h2 {
      @apply text-2xl block text-left mb-1;
    }
  }
}

.carousel {
  @apply relative;
}

.carousel__dot-group {
  @apply mx-auto text-center absolute bottom-0 left-0 w-full;
}

.carousel__dot {
  @apply px-1 pb-2;
  span {
    @apply w-[10px] h-[10px] inline-block bg-white shadow-md drop-shadow-md bg-opacity-30 rounded-full;
  }

  &.carousel__dot--selected {
    span {
      @apply bg-opacity-80;
    }
  }
}

.carousel__slider-tray-wrapper {
  @apply overflow-hidden;
}

.carousel__slider-tray--horizontal {
  @apply flex;
}

